tests/miniJava/neg/003040_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = void new java ( ) ; } }
